--- a/Control.Geocoder.css
+++ b/Control.Geocoder.css
@@ -16,6 +16,11 @@
 	display: inline;
 }
 
+.leaflet-geocoder-input{
+    padding-left: 0 !important;
+    padding-right: 3px !important;
+}
+
 .leaflet-control-geocoder-form input, .leaflet-control-geocoder-form ul, .leaflet-control-geocoder-error {
 	border: 0;
 	color: transparent;
@@ -35,7 +40,7 @@
 .leaflet-control-geocoder-icon {
 	width: 26px;
 	height: 26px;
-	background-image: url(images/geocoder.png);
+	background-image: url(/libs/leaflet-control-geocoder/images/geocoder.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	float: right;
@@ -48,19 +53,28 @@
 }
 
 .leaflet-control-geocoder-throbber .leaflet-control-geocoder-icon {
-	background-image: url(images/throbber.gif);
+	background-image: url(/libs/leaflet-control-geocoder/images/throbber.gif);
+}
+
+.leaflet-control-geocoder-expanded{
+    padding: 5px 10px 5px 5px;
 }
 
 .leaflet-control-geocoder-expanded input, .leaflet-control-geocoder-error {
-	width: 226px;
+	width: 366px;
 	margin-left: 4px;
 	padding-left: 4px;
 	padding-right: 0px;
 	color: #000;
+
+    box-shadow: none;
+    -webkit-box-shadow: none;
 }
 
 .leaflet-control-geocoder-form input:focus {
 	outline: none;
+    box-shadow: none;
+    -webkit-box-shadow: none;
 }
 
 .leaflet-control-geocoder-form button {
@@ -78,13 +92,14 @@
 }
 
 ul.leaflet-control-geocoder-alternatives {
-	width: 260px;
+	width: 400px;
 	overflow: hidden;
   	text-overflow: ellipsis;
   	white-space: nowrap;
   	list-style: none;
   	padding: 0;
   	transition: height 0.125s ease-in;
+    margin-left: 0;
 }
 
 .leaflet-control-geocoder-alternatives-minimized {
