--- a/Control.Geocoder.css
+++ b/Control.Geocoder.css
@@ -1,10 +1,9 @@
 .leaflet-control-geocoder {
     display: none;
-	background-color: rgba(255, 255, 255, 0.8);
-	box-shadow: 0 1px 7px rgba(0,0,0,0.65);
-	-webkit-border-radius: 4px;
-	        border-radius: 4px;
-            height: 22px;
+	background-color: rgba(255, 255, 255, 0.7);
+    border: 1px solid #ccc;
+	/* box-shadow: 0 1px 7px rgba(0,0,0,0.65); */
+    height: 22px;
 }
 
 .leaflet-touch .leaflet-control-geocoder {
